# TulaVM

./: .gitignore  CMakeLists.txt
include/tula/: VM.hpp
src/: CMakeLists.txt  ClazzLoader.cpp  ClazzLoader.hpp  ConstantPool.cpp  ConstantPool.hpp  Error.hpp  JVM.hpp  Klass.cpp  Klass.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp  Types.hpp  VM.cpp
src/classfile/: ClassFileParser.cpp  ClassFileParser.hpp  ClassFileReader.cpp  ClassFileReader.hpp
src/utils/: Enum.hpp
tests/: CMakeLists.txt  main.cpp
tests/res/com/tula/: Test.java
tests/src/: BaseTest.cpp  BaseTest.hpp  Symbol.cpp  VM.cpp
tests/src/classfile/: ConstantPool.cpp
